<resources>
    <string name="app_name">tiendita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="contactanos">Contáctanos</string>
    <string name="versionApp">Tiendita v1.0</string>
    <string name="integrantes">Integrantes</string>
    <string name="nombreUno">Butrón Cañada Juan Jesús</string>
    <string name="nombreDos">Díaz Rodríguez Andrés Heladio</string>
    <string name="nombreTres">Reyes Montiel Fernando Braulio</string>
    <string name="nombreCuatro">Rodríguez Duarte Brandon Iván</string>
    <string name="materia">Materia</string>
    <string name="nombreMateria">Desarrollo Móvil</string>
    <string name="profesor">Profesor</string>
    <string name="nombreProfesor">Pulido Alba Rocío Elizabeth</string>

    //String globales
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="recuperar">Recuperar Contraseña</string>

    //Strings para login
    com.example.tiendita.ui.usuario
    contraseña
    <string name="olvidar_password">¿Ha olvidado su contraseña?</string>
    <string name="ingresarBttn">Ingresar</string>
    <string name="registrarBttn">Registrarse</string>

    //Strings para signup
    com.example.tiendita.ui.usuario
    <string name="negocio">Negocio</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo electrónico</string>
    contraseña
    <string name="nombreNegocio">Nombre del Negocio</string>

    //String para recoverPassword
    <string name="leyendaRecuperar">Si ha olvidado su contraseña, por favor, ingrese su correo
    electrónico a continuación y si coincide con una cuenta activa, se enviará un enlace para poder
    recuperar la contraseña</string>


    //Strings para Drawers
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>
    //Strings para Drawer Usuario
    <string name="mapa">Mapa de Tiendas</string>
    //Strings para Drawer Negocio
    <string name="sucursales">Sucursales</string>


    //Strings para Usuario
    <string name="msj_cargando_tiendas">Cargando tiendas</string>
    <string name="msj_descargando_datos_tienda">Descargando datos de la tienda</string>

    //Strings para Perfil
    <string name="editarBtn">Editar</string>
    <string name="guardarBtn">Guardar</string>
    <string name="descartarBtn">Descartar</string>
    <string name="msj_cargando_datos_perfil">Cargando datos del perfil</string>
    <string name="msj_descargando_datos_perfil">Descargando datos del perfil</string>

    //Strings para Pedidos
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="listaPedidos">Lista de Pedidos</string>
    <string name="cancelarBtn">Cancelar</string>
    <string name="buscarProducto">Buscar Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="presentacion">Presentación</string>
    <string name="msj_cargando_detalles_pedido">Cargando detalles del pedido</string>
    <string name="msj_descargando_datos_pedido">Descargando datos del pedido</string>
    <string name="msj_cargando_lista_pedidos">Cargando lista de pedidos</string>

    //Strings para Negocio


    <string name="masDetalles">Más Detalles</string>
    <string name="generarPedido">Generar Pedido</string>

    <string name="adminProductos">Administrar Productos</string>
    <string name="eliminarBtn">Eliminar</string>
    <string name="msj_eliminar_sucursal">¿Estás seguro de querer eliminar esta sucursal? Se perderán
        todos los productos que haya registrado para esta sucursal</string>
    <string name="msj_generando_coordenadas">Generando coordenadas de la dirección</string>
    <string name="msj_guardando_datos">Guardando datos</string>
    <string name="msj_guardado_datos_exitoso">Datos guardados exitosamente</string>


    <!--Mensaje de error-->
    <string name="msj_error_campo_vacio">El campo no puede estar vacío</string>
    <string name="msj_error_campo_correo">El correo electrónico no es válido</string>
    <string name="msj_error_campo_contrasenia">La contraseña no es válida. Debe de contener letras mayúsculas,
      minusculas, números, caracteres especiales (-_*%&amp;=!) y una longitud entre 8 y 30</string>
    <string name="msj_error_campo_nombre">El nombre no es válido</string>
    <string name="msj_error_apellido">El apellido no es válido</string>
    <string name="msj_error_correo_registrado">El correo electrónico ya se encuentra registrado</string>
    <string name="msj_error_credenciales_no_validas">Correo o constraseña no válidos</string>
    <string name="msj_error_registro">Ocurrió un error durante el registro</string>
    <string name="msj_error_inicio_sesion">Hubo un error al iniciar sesión</string>
    <string name="msj_error_generacion_coordenadas">Ocurrió un error al generar las coordenadas de la dirección</string>
    <string name="msj_error_guardar_datos">Ocurrió un error al guardar los datos</string>
    <string name="msj_error_foto_no_tomada">Debe de tomar una foto primero</string>

    <!--Mensajes-->
    <string name="msj_registrando">Registrando</string>
    <string name="msj_registro_exitoso">Registro Exitoso</string>
    <string name="msj_iniciando_sesion">Iniciando sesión</string>
    <string name="msj_correo_enviado_restab_contra">El correo de restablecimiento de
        contraseña ha sido enviado</string>
    <string name="msj_enviando_correo_restab_contra">Enviando correo</string>

    <!--Constantes del Manifest-->
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="sin_sucursales">No hay sucuarsales cercanas</string>
    <string name="imagen_desc">image</string>
    <string name="error_cargar_img">Ocurrio un error al cargar la imagen</string>
    <string name="action_ir">Ver Tienda</string>
    <string name="header_tiendita">Tienda</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="localizacion">Localizacion</string>
    <string name="error_datos">Error con la operacion de datos</string>
    <string name="error_tomar_img">Error al tomar foto</string>
    <string name="no_img">Error al Tomar imagen</string>
    <string name="error_actualiza_img">Error al subir imagen</string>
    <string name="actualizando_img">Subiendo imagen</string>
    <string name="datos_actualizados">Actualizado</string>
    <string name="sin_pedidos">Sin Pedidos</string>
    <string name="fallo_pedido">Error al obtener los datos</string>
    <string name="header_producto">Producto</string>
    <string name="updated_ref">Referencia Actualizada</string>
    <string name="error_ref">Error al actualizar referencia</string>
    <string name="pedido">Pedido</string>
    <string name="disponible">Disponible</string>
    <string name="agregar">Agregar</string>
    <string name="action_cerrar_session">Cerrar Sesion</string>
    <string name="error_cargar_datos">Error al cargar datos</string>
    <string name="quitar">Quitar</string>
    <string name="elimina_pedido">Eliminar</string>
    <string name="sin_productos">Sin productos</string>
    <string name="sin_productos_encontrados">No se encontraron coincidencias</string>
    <string name="pedido_vacio">El pedido debe terner al menos un producto</string>
    <string name="header_eliminar">Eliminar</string>
    <string name="message_eliminar_pedido">¿Eliminar pedidos?</string>
    <string name="action_eliminar">Eliminar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="pedido_actualizado">Pedido Actualizado</string>
    <string name="pedido_guardado">Pedido Guardado</string>
    <string name="pedido_eliminado">Pedido Eliminado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapa_negocio">¿Donde esta su negocio?</string>
    <string name="sucursal">Sucursal</string>
    <string name="editar_prod">Editar Producto</string>
    <string name="sin_sucursales_registradas">No hay sucursales registradas</string>
    <string name="msj_operacion_datos">Espere un momento...</string>
    <string name="action_agregar" >Agregar Nueva</string>
    <string name="msj_cargando_lista_sucursales">Cargando Sucursales</string>
    <string name="header_salir">Salir</string>
    <string name="message_salir">¿Cerrar Aplicación?</string>
    <string name="action_salir">Salir</string>
    <string name="msj_elimindo_sucursal">Eliminando</string>
    <string name="error_eliminar">Error al eliminar</string>
    <string name="exito_eliminar">Eliminado</string>
    <string name="direccion">Dirección</string>
    <string name="hora_apertura">Hora Apertura</string>
    <string name="hora_cierre">Hora de Cierre</string>
    <string name="msj_cargando_lista_productos">Cargando Productos</string>
    <string name="msj_datos_vacios">Campos Vacios</string>
    <string name="error_exceso">Ingrese una cantidad valida</string>
<<<<<<< HEAD
    <string name="entregado">Entregado</string>
    <string name="header_entregado">Entregado</string>
    <string name="message_entrefar_pedido">¿Pedido entregado?</string>
    <string name="action_entregado">Entregado</string>
=======
    <string name="msj_eliminar_producto">¿Deseas eliminar definitivamente este producto?</string>
    <string name="msj_eliminando_producto">El producto está siendo eliminado, por favor, espere.</string>
>>>>>>> e68c73ba6158e328b2e791eafd195147313f96c6

</resources>