<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfilu"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pedidosu"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_mapu"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/mapa" />
    </group>
</menu>