<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/drawer_usuario">
        <item
            android:id="@+id/nav_homeu"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfilu"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pedidosu"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_mapu"
            android:icon="@drawable/ic_business"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_infou"
            android:icon="@drawable/ic_info"
            android:title="@string/contactanos"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/drawer_negocio">
        <item
            android:id="@+id/nav_homen"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfiln"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pedidosn"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_sucursales"
            android:icon="@drawable/ic_business"
            android:title="@string/sucursales" />
        <item
            android:id="@+id/nav_infon"
            android:icon="@drawable/ic_info"
            android:title="@string/contactanos"/>
    </group>
</menu>