<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tiendita.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfiln"
        android:name="com.example.tiendita.ui.negocio.perfil.PerfilNFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfiln" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.tiendita.ui.mapa.MapFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_perfilu"
        android:name="com.example.tiendita.ui.usuario.perfil.PerfilUFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfilu" />


    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.tiendita.ui.pedidos.PedidosFragment"
        android:label="@string/pedidos"
        tools:layout="@layout/fragment_pedidos" >
        <action
            android:id="@+id/action_nav_perdidos_to_nav_perdido"
            app:destination="@id/nav_pedido" />
    </fragment>
    <fragment
        android:id="@+id/nav_pedido"
        android:name="com.example.tiendita.ui.pedidos.DetallePedidoFragment"
        android:label="@string/pedido"
        tools:layout="@layout/fragment_detalle_pedido" />
</navigation>