<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="680px"
            android:layout_gravity="center"
            android:layout_margin="20px"
            android:padding="40px"
            android:src="@drawable/img_logo"></ImageView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/myriadproregular"
            android:gravity="center"
            android:text="@string/iniciarSesion"
            android:textColor="@color/font_color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person"></ImageView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextFieldInputTextUser"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:fontFamily="@font/myriadproregular"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="15sp"></com.google.android.material.textfield.TextInputEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_passwordlock"></ImageView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextFieldInputTextPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:fontFamily="@font/myriadproregular"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"></com.google.android.material.textfield.TextInputEditText>

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewRecoverPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/olvidar_password"
        android:textSize="18sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/ingresarBttn"
            app:cornerRadius="40dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarse"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/registrarBttn"
            app:cornerRadius="40dp"></com.google.android.material.button.MaterialButton>
    </LinearLayout>
</LinearLayout>